[package]
authors = ["The Rust Project Developers"]
name = "rustc_data_structures"
version = "0.0.0"

[lib]
name = "rustc_data_structures"
path = "lib.rs"
crate-type = ["dylib"]

[dependencies]
log = "0.3"
serialize = { path = "../libserialize" }
parking_lot = {version = "0.4", features = ["nightly", "deadlock_detection"]}
